src/style.css
/* ... */
/* 
    Album Grid view images and containers 
*/

.album {
  overflow: hidden;
}
img.album-image {
  width: 98%;
  max-width: 100%;
  border-width: 2px;
  border-radius: 2px;
  cursor: pointer;
}

img.album-image-modal {
  width: 100%;
}

.handle-container {
  z-index: 50;
  height: 0px;
  width: 0px;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.5;
}
.handle {
  width: 40px;
  height: 40px;
}
.loading-message {
  width: 300px;
  margin: auto auto;
  margin-top: 200px;
  text-align: center;
}

.loading-text {
  margin-top: 20px;
  font-size: 1.5em;
}
.album-cover {
  overflow: hidden;
}

.control-bar {
  visibility: visible;
  display: flex;
  position: fixed;
  z-index: 300;
  opacity: 0.95;
  bottom: 0;
  width: 100%;
  box-shadow: -1px -5px 16px #888888;
  padding: 10px 0px 25px 0px;
  background-color: white;
}

.light-theme .page__background {
  background-color: #d9d9d9 !important;
}

.control-bar.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.5s, opacity 0.5s linear;
}

.now-playing {
  display: flex;
  margin: 0 auto;
  padding: 0px 6px 0px 6px;
}
.album-size-slider {
  width: 50%;
  margin: 0 auto;
}

.playing-inset > {
  height: 100px;
  max-height: 100px;
  position: absolute;
  overflow: hidden;
  width: 100%;
  z-index: 100;
  max-width: 100%;
}

.genre-selector {
  font-size: 40px !important;
  text-align: center;
  flex-direction: row;
  display: flex;
  align-self: center;
  flex-basis: 50%;
  padding: 0px 10px 0px 10px;
  white-space: normal;
  flex-grow: 0;
  padding: 10px 20px 10px 20px;
  margin: 0 auto;
  white-space: nowrap;
}

.player-selector {
  font-size: 40px !important;
  display: flex;
  text-align: center;
  flex-direction: row;
  flex-basis: 50%;
  padding: 0px 10px 0px 10px;
  align-self: center;
  white-space: normal;
}
.player-selector ons-toolbar-button {
  margin: 0 auto;
}

.global-controls {
  display: flex;
}

.alpha-shuffle,
.theme-control {
  display: flex;
  flex-wrap: wrap;
  padding: 0px 20px 0px 20px;
  align-items: center;
}

button.genre-choice,
button.search-button {
  text-transform: none;
  border: solid;
  border-color: rgb(179, 177, 177);
  border-width: 1px;
  margin-left: 1em;
  margin: 5px 5px 5px 0px;
  padding: 2px 12px;
}
button.search-clear-button {
  border: none;
  margin-left: -1.5rem;
  z-index: 90;
  min-width: 1rem !important;
  background: #c1c1c19e;
  border-radius: 1rem;
  height: 1rem;
  align-self: center;
  display: flex;
  align-items: center;
  width: 1rem;
  justify-content: center;
  cursor: pointer;
  color: #8c8c8c;
}
button.order-select,
button.theme-select {
  width: 70px;
}
.search-clear {
  background-color: #dcdcdc;
  border-radius: 5px;
}
.view-and-search-selector hr {
  margin-top: 0.4rem;
  margin-bottom: 0.4rem;
  padding: 0px 10px 0px 10px;
}
.view-and-search-selector {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}
.view-and-search-selector ons-button {
  flex-grow: 1;
}

.track-buttons {
  display: flex;
  align-items: center;
}
.view-and-search-selector ons-segment {
  margin-bottom: 20px;
  min-width: 120px;
}

.codec {
  color: grey;
  padding: 0 10px 0 10px;
  font-size: 8px;
  font-weight: 800;
  background: #f3ecec;
  border-radius: 3px;
  margin-left: 10px;
  width: auto;
  height: 12px;
}
.now-playing-album-title {
  font-weight: bold;
}
button {
  min-width: 40px !important;
}
.custom-den-controls {
  display: flex;
  flex-wrap: wrap;
  max-width: 400px;
}
.base-lms-controls {
  display: flex;
  padding: 0px 10px 0px 10px;
  max-width: 400px;
}
ons-toolbar-button.player-control-button {
  flex-grow: 1;
  padding: 2px 15px 2px 15px;
}

.custom-den-controls .player-control-button {
  margin-bottom: 0px;
}
.track-title {
  font-size: 1rem;
  text-transform: none;
  margin-right: .5rem;
}
.info-i {
  display: flex;
  text-transform: none;
  background-color: lightgray;
  width: 25px;
  height: 25px;
  border-radius: 15px;
  font-weight: 700;
  font-family: ui-serif;
  text-align: center;
  align-items: center;
  cursor: pointer;
}
.i {
  display: flex;
  text-align: center;
  width: 100%;
  padding-left: 50%;
  position: relative;
  left: -3px;
}

.player-bar {
  display: flex;
}

.card {
  color: black;
}

.now-playing {
  display: block;
}

.now-playing > img {
  max-width: 150px;
  float: right;
  margin-right: 20px;
  margin-bottom: 10px;
}

.now-playing .info {
  width: 100%;
  display: flex;
}
.now-playing-meta {
  white-space: normal;
  gap: 4px;
  flex-grow: 1;
  min-height: 5rem;
}
.now-playing-meta,
.control-buttons {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
}
.playing-inset > div {
  height: 100px;
  flex-basis: 20%;
}

.album-info {
  display: flex;
  margin: 0.5rem;
  justify-content: space-between;
}
.album-info .text-info {
  flex-basis: 80%;
}

.mini-album-cover.button {
  margin: 5px 15px 5px 15px;
  padding: 0;
}
.mini-album-cover img {
  width: auto;
  height: 80px;
}

.track-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.track-container .track-info {
  display: flex;
  flex-basis: 80%;
  flex-direction: column;
}
.track-container .tracklist-album {
  flex-grow: 1;
}

.grid-tracklist .track-details {
  margin-left: 1rem;
  margin-bottom: 1rem;
  margin-right: 1rem;
}
.track-info-controls {
  display: flex;
  align-items: center;
}
.tracklist-album {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.track-container .track-info .track-title {
  font-size: 1.4em;
}
.tracklist-album {
  width: 100px;
  display: inline-block;
  float: right;
  transition: 0.2s;
}
.list-track {
  height: 100px;
  border-style: solid;
  border-color: rgb(177, 174, 174);
  margin-top: 10px;
  padding: 10px;
  border-radius: 10px;
  border-width: 2px;
  height: auto;
}
.track-list-dialog {
  z-index: 100;
}
.dialog {
  width: 80%;
  min-height: 100px;
  box-shadow: 9px 11px 3px rgba(0, 0, 0, 0.28);
}
/* ... */

